fix header img link on Safari

--- a/src/app/screen/screen.component.scss
+++ b/src/app/screen/screen.component.scss
@@ -64,6 +64,7 @@ main {
 img {
     max-width: 100%;
     height: auto;
+    display: block;
 }
 
 .icon {
